syntax = "proto3";

package dataplane;

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/dataplane/protos";

////////////////////////////////////////////////////////////////////////////////

message CreateSnapshotFromURLRequest {
    string SrcURL = 1;
    string Format = 2;
    string DstSnapshotId = 3;
    bool UseS3 = 4;
}

message CreateSnapshotFromURLResponse {
    uint64 SnapshotSize = 1;
    uint64 SnapshotStorageSize = 2;
}

message CreateSnapshotFromURLTaskState {
    CreateSnapshotFromURLRequest Request = 1;
    double Progress = 2;
    uint32 MilestoneChunkIndex = 3;
    uint64 SnapshotSize = 4;
    uint64 SnapshotStorageSize = 5;
    uint32 ChunkCount = 6;
}

message CreateSnapshotFromURLMetadata {
    double Progress = 1;
}
